tests/invalid/prog_io_erroneous.err_exp2
prog_io_erroneous.m:001: Warning: interface for module `prog_io_erroneous' does
prog_io_erroneous.m:001:   not export anything.
prog_io_erroneous.m:012: Error: no clauses for predicate `q/2'.
