tests/invalid/prog_io_erroneous.err_exp
prog_io_erroneous.m:  1: Warning: interface for module `prog_io_erroneous' does not export anything.
prog_io_erroneous.m:012: Error: no clauses for
prog_io_erroneous.m:012:   predicate `prog_io_erroneous.q/2'.
prog_io_erroneous.m:007: In clause for `p(in, out, out)':
prog_io_erroneous.m:007:   in argument 1 of call to predicate `prog_io_erroneous.q/2':
prog_io_erroneous.m:007:   mode error: variable `Y' has instantiatedness `free',
prog_io_erroneous.m:007:   expected instantiatedness was `ground'.
